tests/Aspire.Hosting.Kubernetes.Tests/Snapshots/KubernetesGatewayTests.AddGateway_WithHostname_AppliesToHostlessRoute.verified.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "HTTPRoute"
metadata:
  name: "public-route"
spec:
  parentRefs:
    - name: "public"
  hostnames:
    - "api.example.com"
    - "www.example.com"
  rules:
    - matches:
        - path:
            type: "PathPrefix"
            value: "/api"
      backendRefs:
        - name: "myapi-service"
          port: 8080
